client/web/src/enterprise/code-monitoring/components/CodeMonitorForm.scss
.code-monitor-form {
    &__card {
        border-radius: 4px;

        &-link {
            &:hover {
                text-decoration: none;
                color: var(--link-color);
            }
        }

        &--button {
            // stylelint-disable-next-line declaration-property-unit-whitelist
            margin: calc(16px - 1px) -1px;
            border-radius: 4px;

            &:hover {
                // stylelint-disable-next-line declaration-property-unit-whitelist
                margin: calc(16px - 2px) -2px;
                border: 2px solid #329af0;
            }

            .create-monitor-page__trigger--disabled & {
                &:hover {
                    // stylelint-disable-next-line declaration-property-unit-whitelist
                    margin: calc(16px - 1px) -1px;
                    border: 1px solid var(--border-color);
                }
            }

            .create-monitor-page__actions--disabled & {
                &:hover {
                    // stylelint-disable-next-line declaration-property-unit-whitelist
                    margin: calc(16px - 1px) -1px;
                    border: 1px solid var(--border-color);
                }
            }
        }
    }

    &__horizontal-rule {
        margin: 2rem 0;
    }

    &__owner-dropdown {
        min-width: 50%;
    }
}

